gradle/src/main/java/com/example/springboot/sandbox/naver/goharrm/innerclass/InnerClassInStaticProperty.java
package com.example.springboot.sandbox.naver.goharrm.innerclass;

public class InnerClassInStaticProperty {
    public class InnerClass {
        private static final String X = "x";
        // private static String app; // error
    }
}
